# proref

./: .env.example  .gitignore  README.md  TRANSFORMERS_EXPLAINED.md  pyproject.toml  requirements.txt
app/: __init__.py  config.py  feedback.py  hf_pipeline.py  llm.py  logging_config.py  main.py  models.py  prompts.py  rag.py
data/: promoted_examples.jsonl  prompt_techniques.json
data/domain_knowledge/: creative_writing.json  data_analysis.json  dev.json  education.json  marketing.json  research.json
feedback/: loop_user_1.jsonl  test_loop_user.jsonl
frontend/: index.html
scripts/: ingest.py
user_profiles/: .gitkeep
