[project]
name = "proref"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=0.5.0",
    "fastapi>=0.110.0",
    "groq>=0.9.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "sentence-transformers>=2.7.0",
    "uvicorn[standard]>=0.29.0",
]
