[project]
name = "proref"
version = "3.0.0"
description = "RAG-powered personalized prompt refiner with HuggingFace specialist pipelines"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Web framework & server
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    # Vector database
    "chromadb>=0.5.0",
    # Local embeddings
    "sentence-transformers>=2.7.0",
    # Data validation + environment config
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    # Environment variable loading
    "python-dotenv>=1.0.0",
    # LLM backends
    "groq>=0.9.0",
    "requests>=2.31.0",
    # Retry / back-off
    "tenacity>=8.2.0",
    # HuggingFace specialist pipelines
    "transformers>=4.40.0",
    "torch>=2.0.0",
    "sentencepiece>=0.1.99",
    # Optional: colored logging
    "colorlog>=6.8.0",
]
